# workshop_observabilidade

./: .gitignore  README.md  anotacoes.txt  logfire_teste.py  main.py  pyproject.toml
exemplo_00/: README.md  exemplo_01.py
exemplo_01/: README.md  compose.yml  exemplo_00.py  exemplo_01_metrics_protheus copy.py
exemplo_02/: client.py  intrumentation.py  intrumentation_metrics.py  server_programmatic.py
exemplo_logfire/: bigquery_logfire.py  pipeline.py  pipeline_2.py  pipeline_2v.py  pipeline_3_bug.py  pipeline_4.py
src/: README.md  README_05.md  README_06.md  README_07_Dashboard.md  main.py  main2.py  main_logfire_01 copy.py  main_logfire_03 copy.py  main_logfire_04.py  main_logfire_05.py  main_logfire_06.py  main_logfire_07_lag.py  pipeline_local.py  pipeline_refatorando_01.py  pipeline_render.py
